// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic1 default 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "type": "heading",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
人生得意须尽欢，莫使金樽空对月。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
天生我材必有用，千金散尽还复来。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
烹羊宰牛且为乐，会须一饮三百杯。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
岑夫子，丹丘生，将进酒，杯莫停。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
与君歌一曲，请君为我倾耳听。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
钟鼓馔玉不足贵，但愿长醉不复醒。",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "title": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": Object {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "type": "root",
}
`;

exports[`basic1 excerpt-40 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "将进酒",
                },
              ],
              "depth": 3,
              "type": "heading",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "君不见黄河之水天上来，奔流到海不复回。",
                },
                Object {
                  "type": "break",
                },
                Object {
                  "type": "text",
                  "value": "
君不见高堂明镜悲白发，朝如青丝暮成雪。",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockquote",
        },
      ],
      "keyword": "tip",
      "title": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
            "start": Object {
              "column": 8,
              "line": 2,
              "offset": 8,
            },
          },
          "type": "text",
          "value": "将进酒 -- 李白 ",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 2,
              "offset": 23,
            },
            "start": Object {
              "column": 18,
              "line": 2,
              "offset": 18,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "type": "admonition",
    },
  ],
  "type": "root",
}
`;
